--- a/Song-Library/src/view/design.fxml
+++ b/Song-Library/src/view/design.fxml
@@ -1,54 +1,87 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.eventhandler">
    <children>
       <TextField fx:id="ASong" alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="27.0" prefWidth="112.0" promptText="Song Name" />
       <TextField fx:id="AArtist" alignment="CENTER" layoutX="134.0" layoutY="7.0" prefHeight="27.0" prefWidth="112.0" promptText="Artist Name" />
       <TextField fx:id="AAlbum" alignment="CENTER" layoutX="256.0" layoutY="7.0" prefHeight="27.0" prefWidth="112.0" promptText="Album Name" />
       <TextField fx:id="AYear" alignment="CENTER" layoutX="377.0" layoutY="7.0" prefHeight="27.0" prefWidth="112.0" promptText="Year" />
-      <Button fx:id="Add" layoutX="499.0" layoutY="7.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="95.0" text="Add Song" textAlignment="CENTER" />
+      <Button fx:id="Add" layoutX="499.0" layoutY="7.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="95.0" text="Add Song" textAlignment="CENTER" onAction="#add"/>
       <Text layoutX="249.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Playlist">
          <font>
             <Font size="30.0" />
          </font>
       </Text>
-      <ImageView fitHeight="89.0" fitWidth="95.0" layoutX="21.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="89.0" fitWidth="95.0" layoutX="50.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@unnamed.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="Delete" layoutX="288.0" layoutY="348.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Delete" textAlignment="CENTER" />
-      <ListView fx:id="listView" layoutX="21.0" layoutY="93.0" prefHeight="166.0" prefWidth="558.0" />
-      <Button fx:id="Edit" layoutX="288.0" layoutY="299.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Edit" />
-      <TextField fx:id="DSong" layoutX="119.0" layoutY="292.0" prefHeight="27.0" prefWidth="138.0" promptText="My Blood">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="DArtist" layoutX="119.0" layoutY="319.0" prefHeight="22.0" prefWidth="138.0" promptText="Ellie Goulding">
+      <Button fx:id="Delete" layoutX="50.0" layoutY="362.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Delete" textAlignment="CENTER" onAction="#delete"/>
+      <ListView fx:id="listView" layoutX="21.0" layoutY="125.0" prefHeight="134.0" prefWidth="558.0" />
+      <Button fx:id="Edit" layoutX="407.0" layoutY="362.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Edit" onAction="#edit"/>
+      <TextField fx:id="ESong" layoutX="382.0" layoutY="269.0" prefHeight="27.0" prefWidth="138.0" promptText="Song">
          <font>
             <Font size="11.0" />
          </font>
       </TextField>
-      <TextField fx:id="DAlbum" layoutX="119.0" layoutY="340.0" prefHeight="22.0" prefWidth="138.0" promptText="Haycon Days">
+      <TextField fx:id="EArtist" layoutX="382.0" layoutY="295.0" prefHeight="22.0" prefWidth="138.0" promptText="Artist">
          <font>
             <Font size="11.0" />
          </font>
       </TextField>
-      <TextField fx:id="DYear" layoutX="119.0" layoutY="362.0" prefHeight="22.0" prefWidth="138.0" promptText="2012">
+      <TextField fx:id="EAlbum" layoutX="382.0" layoutY="317.0" prefHeight="22.0" prefWidth="138.0" promptText="Album">
          <font>
             <Font size="11.0" />
          </font>
       </TextField>
+      <TextField fx:id="EYear" layoutX="382.0" layoutY="339.0" prefHeight="22.0" prefWidth="138.0" promptText="Year">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </TextField>
+      <Label fx:id="DSong" layoutX="146.0" layoutY="269.0" prefHeight="22.0" prefWidth="164.0" text="My Blood">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="DArtist" layoutX="146.0" layoutY="300.0" prefHeight="15.0" prefWidth="138.0" text="Ellie Goulding">
+         <font>
+            <Font size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="DAlbum" layoutX="146.0" layoutY="320.0" prefHeight="15.0" prefWidth="138.0" text="Haycon Days">
+         <font>
+            <Font size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="DYear" layoutX="146.0" layoutY="340.0" prefHeight="15.0" prefWidth="138.0" text="2012">
+         <font>
+            <Font size="12.0" />
+         </font>
+      </Label>
+      <Text layoutX="286.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;&gt;&gt;">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <ToolBar layoutX="21.0" layoutY="93.0" prefHeight="35.0" prefWidth="558.0">
+         <items>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Song Name" wrappingWidth="261.7001953125" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Artist Name" wrappingWidth="180.388671875" />
+         </items>
+      </ToolBar>
    </children>
 </AnchorPane>
