--- a/Song-Library/src/view/design.fxml
+++ b/Song-Library/src/view/design.fxml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
@@ -26,7 +25,7 @@
       </Text>
       <ImageView fitHeight="89.0" fitWidth="95.0" layoutX="50.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@unnamed.jpg" />
+            <Image url="file:/Users/nadaelshamaa/Desktop/Uni/S7-Fall2020/Software%20Methodology/unnamed.jpg" />
          </image>
       </ImageView>
       <Button fx:id="Delete" layoutX="50.0" layoutY="362.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="89.0" text="Delete" textAlignment="CENTER" onAction="#delete"/>
